# FlorianiVoiceTerminal

./: .gitignore  download.sh  proxy.py  run.sh
cpp_kokoro/: AudioPlayer.cpp  AudioPlayer.h  BUILD.bazel  CLAUDE.md  CMakeLists.txt  KokoroInference.cpp  KokoroInference.h  MODULE.bazel  Tokenizer.cpp  Tokenizer.h  main.cpp  rebuild_all.sh
cpp_voice_query/: BUILD.bazel  CLAUDE.md  CMakeLists.txt  InboundServer.cpp  InboundServer.h  LlmClient.cpp  LlmClient.h  MODULE.bazel  PortAudioSource.h  PriorityPlaybackQueue.cpp  PriorityPlaybackQueue.h  SentenceSplitter.h  SpeechRequest.h  TtsEngine.cpp  TtsEngine.h  VoiceChannel.h  compile_commands.json  echo_server.py  main.cpp  rebuild_all.sh  run_voice_query.sh
cpp_whisper/: BUILD.bazel  CLAUDE.md  CMakeLists.txt  MODULE.bazel  main.cpp  rebuild_all.sh  run_whisper.sh  whisper_stream.cpp  whisper_stream.h
